tests/errors/conditional_return_nonnull.dang
# A conditional without an else may skip its body, so a return inside the
# then branch cannot make the function non-null.
bad(flag: Boolean!): String! {
  if (flag) {
    return "x"
  }
}
